// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders nothing if there are no selected criteria 1`] = `
<DocumentFragment>
  .c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders the selected artists 1`] = `
<DocumentFragment>
  .c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  >
    <div>
      <h2>
        Artists
      </h2>
      <div
        class="c1"
      >
        Alice
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
      <div
        class="c1"
      >
        Bob
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders the selected attribution class 1`] = `
<DocumentFragment>
  .c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  >
    <div>
      <h2>
        Attribution Class
      </h2>
      <div
        class="c1"
      >
        Foo Edition
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders the selected fair 1`] = `
<DocumentFragment>
  .c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  >
    <div>
      <h2>
        Fair
      </h2>
      <div
        class="c1"
      >
        FooFair
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders the selected genes 1`] = `
<DocumentFragment>
  .c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  >
    <div>
      <h2>
        Genes
      </h2>
      <div
        class="c1"
      >
        Foo
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
      <div
        class="c1"
      >
        Bar
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders the selected keywords 1`] = `
<DocumentFragment>
  .c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  >
    <div>
      <h2>
        Keywords
      </h2>
      <div
        class="c1"
      >
        soup
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
      <div
        class="c1"
      >
        can
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders the selected partner 1`] = `
<DocumentFragment>
  .c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  >
    <div>
      <h2>
        Partner
      </h2>
      <div
        class="c1"
      >
        Gallery Foo
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders the selected sale 1`] = `
<DocumentFragment>
  .c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  >
    <div>
      <h2>
        Sale
      </h2>
      <div
        class="c1"
      >
        Phillips
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders the selected tags 1`] = `
<DocumentFragment>
  .c1 {
  font-weight: bold;
  margin: 0.25em 0;
}

.c1 a.remove {
  display: inline-block;
  height: 2em;
  width: 2em;
  line-height: 2em;
  text-align: center;
  color: #ddd;
  margin-left: 0.5em;
  border-radius: 1em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 a.remove:hover {
  color: #333;
  cursor: pointer;
  background: #eee;
}

.c0 h2 {
  font-family: 'ITC Avant Garde Gothic W01';
  color: #999;
  font-size: 0.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  margin-top: 1.5em;
  text-transform: uppercase;
}

<div
    class="c0"
  >
    <div>
      <h2>
        Tags
      </h2>
      <div
        class="c1"
      >
        Foo
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
      <div
        class="c1"
      >
        Bar
        <a
          class="remove"
          href="#"
        >
          ✕
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
